<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="306dp"
        android:layout_height="332dp"
        android:background="@drawable/bg_setting_dialog_radius_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:paddingStart="@dimen/size_24"
            android:text="@string/textViewSoundSettingTitle"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <View
            android:id="@+id/viewLine1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tvTitle"
            android:background="@color/mercury" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_below="@id/viewLine1"
            tools:listitem="@layout/item_dialog_setting"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="20" />

        <View
            android:id="@+id/viewLine2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/rlOption"
            android:background="@color/mercury" />

        <RelativeLayout
            android:id="@+id/rlOption"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:layout_alignParentBottom="true"
            android:paddingVertical="@dimen/size_8"
            android:paddingEnd="@dimen/size_12"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/size_23"
                android:layout_toStartOf="@id/tvOk"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/textViewSettingDialogCancelButtonTitle"
                android:textColor="@color/orange"
                android:textSize="@dimen/textSize_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOk"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_button_confirm_dialog"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/textViewSettingDialogOkButtonTitle"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_16"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
