<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout
        android:layout_width="@dimen/size_306dp"
        android:layout_height="@dimen/size_176"
        android:background="@drawable/bg_setting_dialog_radius_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="@dimen/size_12"
            android:includeFontPadding="false"
            android:text="@string/textViewShopIdTitle"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_16"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtShopId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="@dimen/size_20"
            android:maxLines="1"
            android:background="@drawable/bg_edt_shop_id"
            android:digits="0123456789"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="@dimen/size_12"
            android:textColor="@color/black"
            tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:maxLength="6"/>

        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:layout_above="@id/rlOption"
            android:background="@color/mercury" />

        <RelativeLayout
            android:id="@+id/rlOption"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:layout_alignParentBottom="true"
            android:paddingVertical="@dimen/size_8"
            android:paddingEnd="@dimen/size_12"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/size_23"
                android:layout_toStartOf="@id/tvOk"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/textViewSettingDialogCancelButtonTitle"
                android:textColor="@color/orange"
                android:textSize="@dimen/textSize_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOk"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_button_confirm_dialog"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/textViewSettingDialogOkButtonTitle"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_16"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
